--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Something</title>
-        <link rel="stylesheet"
-        href="index.css" />
-    </head>
-    <body>
-        <h1 id="title">This works!</h1>
-        <script src="index.js"></script>
-    </body>
+  <head>
+    <title>Something</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="js-clock">
+      <h1>00:00</h1>
+    </div>
+    <form class="js-form">
+      <input type="text" placeholder="What is your name?" />
+    </form>
+    <script src="clock.js"></script>
+    <script src="gretting.js"></script>
+  </body>
 </html>
