--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Something</title>
     <meta charset="utf-8" />
-    //이모지 쓸려고 넣음
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -22,9 +21,11 @@
     </form>
 
     <ul class="js-toDoList"></ul>
-
+    <spanc class="js-weather"></spanc>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
+    <script src="bg.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
